mobile menu ready, sometimes flickers - fix needed

--- a/style.css
+++ b/style.css
@@ -99,22 +99,48 @@ body
 }
 
 
-#mobile-menu-container
+.mobile-menu-container
 {
     width: 100%;
     position: fixed;
-    top: 150px;
+    top: 148px;
     background-color: #000005;
     display: flex;
     flex-direction: column;
     justify-content: center;
     align-items: center;
+    animation: mobile-menu-appear 500ms;
+}
+
+@keyframes mobile-menu-appear
+{
+    0% {opacity: 0;}
+    100% {opacity: 1;}
+}
+
+.mobile-menu-closing
+{
+    width: 100%;
+    position: fixed;
+    top: 148px;
+    background-color: #000005;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    animation: mobile-menu-dissappear 500ms;
+}
+
+@keyframes mobile-menu-dissappear
+{
+    0% {opacity: 1;}
+    100% {opacity: 0;}
 }
 
 .mobile-menu-item
 {
     width: 100%;
-    min-height: 100px;
+    min-height: 150px;
     display: flex;
     justify-content: center;
     align-items: center;
